--- a/blocks/heart-button.css
+++ b/blocks/heart-button.css
@@ -15,16 +15,12 @@
 }
 
 .heart-button:hover {
-  opacity: 0.6;
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 770px) {
   .heart-button {
     transition: opacity 2s ease-in-out;
-  }
-
-  .heart-button:hover,
-  .heart-button:active {
-    opacity: 0.7;
   }
 }
